#39 Send Page: Confirm button on web-mobile layout issue

--- a/src/app/components/top-bar/top-bar.scss
+++ b/src/app/components/top-bar/top-bar.scss
@@ -31,10 +31,6 @@
         text-align: center;
     }
 
-    .middle-padding {
-        padding-right: 56px;
-    }
-
     .grey {
         color: grey;
     }
