--- a/src/app/pages/send/send.scss
+++ b/src/app/pages/send/send.scss
@@ -6,4 +6,8 @@
             flex: 1;
         }
     }
+    .no-padding-top-bottom {
+        padding-top: 0px;
+        padding-bottom: 0px;
+    }
 }
